--- a/platforms/browser/index.html
+++ b/platforms/browser/index.html
@@ -27,13 +27,7 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44299.97436002478!2d13.20914302359581!3d46.05611656585828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477a4aaffcbb00f5%3A0x3057d929f4963858!2s33100+Udine+UD!5e0!3m2!1sit!2sit!4v1465542996177" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
